# client-pipeline

./: .env.example  .gitignore  Dockerfile  config.yaml  docker-compose.yml  pyproject.toml
scripts/: seed_channels.py
src/pipeline/: __main__.py  config.py  orchestrator.py
src/pipeline/bot/: notifier.py
src/pipeline/db/: models.py  repository.py  schema.sql
src/pipeline/llm/: classifier.py  openrouter.py  outreach.py  sentiment.py
src/pipeline/telegram/: client.py  collector.py  discovery.py  responder.py  sender.py
src/pipeline/utils/: rate_limiter.py  retry.py
